--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "apiswagger",
   "version": "1.0.0",
-  "description": "",
-  "main": "index2.js",
+  "description": "## C.F.G.S DAM CIFP PAU CASESNOVES 🎓",
+  "main": "apps.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "mysql2": "^3.12.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
